Add initial HTML structure for meetups page

--- a/meetups/index.html
+++ b/meetups/index.html
@@ -1,1 +1,62 @@
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Meetups | bitcoindiana.org</title>
+  <meta name="description" content="Bitcoin meetups across Indiana." />
+  <link rel="stylesheet" href="/assets/css/site.css" />
+</head>
+
+<body>
+  <header class="header">
+    <nav class="topnav wrap" aria-label="Primary">
+      <a class="brand" href="/" aria-label="Bitcoin Indiana (home)">
+        <img class="brand-logo" src="/assets/img/logo.svg" alt="" />
+        <span class="brand-name">Bitcoin Indiana</span>
+      </a>
+
+      <div class="links">
+        <a href="/" data-nav="map">Map</a>
+        <a href="/meetups/" data-nav="meetups">Meetups</a>
+        <a href="/events/" data-nav="events">Events</a>
+        <a href="/resources/" data-nav="resources">Resources</a>
+        <a href="/about/" data-nav="about">About</a>
+      </div>
+    </nav>
+
+    <div class="wrap header-content">
+      <h1 class="page-title">Meetups</h1>
+      <p class="page-intro">
+        Regular meetups make the circular economy real: you meet builders, merchants, educators, and plebs who are actually spending and
+        earning sats locally. Add your meetup here (PRs welcome).
+      </p>
+    </div>
+  </header>
+
+  <main class="wrap main">
+    <section class="panel pad">
+      <h2 class="h2">Recurring meetups (placeholder)</h2>
+      <ul class="list">
+        <li><strong>Indianapolis</strong> — Add details (location, cadence, organizer link)</li>
+        <li><strong>Fort Wayne</strong> — Add details</li>
+        <li><strong>Bloomington</strong> — Add details</li>
+      </ul>
+
+      <p class="muted">
+        Later, we can drive this page from a simple JSON file in <code>/assets/data/meetups.json</code>.
+      </p>
+    </section>
+  </main>
+
+  <footer class="footer">
+    <div class="wrap footer-inner">
+      <div>bitcoindiana.org</div>
+      <div class="footer-muted">Meetups • Events • Resources</div>
+    </div>
+  </footer>
+
+  <script src="/assets/js/site.js"></script>
+</body>
+</html>
 
