--- a/events/index.html
+++ b/events/index.html
@@ -1,1 +1,65 @@
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Events | bitcoindiana.org</title>
+  <meta name="description" content="Bitcoin events in Indiana." />
+  <link rel="stylesheet" href="/assets/css/site.css" />
+</head>
+
+<body>
+  <header class="header">
+    <nav class="topnav wrap" aria-label="Primary">
+      <a class="brand" href="/" aria-label="Bitcoin Indiana (home)">
+        <img class="brand-logo" src="/assets/img/logo.svg" alt="" />
+        <span class="brand-name">Bitcoin Indiana</span>
+      </a>
+
+      <div class="links">
+        <a href="/" data-nav="map">Map</a>
+        <a href="/meetups/" data-nav="meetups">Meetups</a>
+        <a href="/events/" data-nav="events">Events</a>
+        <a href="/resources/" data-nav="resources">Resources</a>
+        <a href="/about/" data-nav="about">About</a>
+      </div>
+    </nav>
+
+    <div class="wrap header-content">
+      <h1 class="page-title">Events</h1>
+      <p class="page-intro">
+        One-off gatherings, workshops, merchant onboarding nights, conferences, and “pay in sats” pub crawls. If you’re hosting,
+        share the details so people can show up and spend bitcoin.
+      </p>
+    </div>
+  </header>
+
+  <main class="wrap main">
+    <section class="panel pad">
+      <h2 class="h2">Upcoming events (placeholder)</h2>
+      <div class="muted">
+        Add events here for now. Later, we can render from <code>/assets/data/events.json</code> or an iCal feed.
+      </div>
+
+      <hr class="hr" />
+
+      <h3 class="h3">How to submit</h3>
+      <ol class="list">
+        <li>Open a PR on the GitHub repo</li>
+        <li>Add your event to this page (or to the future JSON file)</li>
+        <li>Include: date/time, city, venue, RSVP link, and whether spending sats is supported</li>
+      </ol>
+    </section>
+  </main>
+
+  <footer class="footer">
+    <div class="wrap footer-inner">
+      <div>bitcoindiana.org</div>
+      <div class="footer-muted">Events</div>
+    </div>
+  </footer>
+
+  <script src="/assets/js/site.js"></script>
+</body>
+</html>
 
