--- a/resources/index.html
+++ b/resources/index.html
@@ -1,1 +1,69 @@
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Resources | bitcoindiana.org</title>
+  <meta name="description" content="Bitcoin resources for Indiana merchants and users." />
+  <link rel="stylesheet" href="/assets/css/site.css" />
+</head>
+
+<body>
+  <header class="header">
+    <nav class="topnav wrap" aria-label="Primary">
+      <a class="brand" href="/" aria-label="Bitcoin Indiana (home)">
+        <img class="brand-logo" src="/assets/img/logo.svg" alt="" />
+        <span class="brand-name">Bitcoin Indiana</span>
+      </a>
+
+      <div class="links">
+        <a href="/" data-nav="map">Map</a>
+        <a href="/meetups/" data-nav="meetups">Meetups</a>
+        <a href="/events/" data-nav="events">Events</a>
+        <a href="/resources/" data-nav="resources">Resources</a>
+        <a href="/about/" data-nav="about">About</a>
+      </div>
+    </nav>
+
+    <div class="wrap header-content">
+      <h1 class="page-title">Resources</h1>
+      <p class="page-intro">
+        Practical links for spending, earning, and onboarding merchants—focused on Lightning payments and simple ops.
+      </p>
+    </div>
+  </header>
+
+  <main class="wrap main">
+    <section class="panel pad">
+      <h2 class="h2">For merchants</h2>
+      <ul class="list">
+        <li><a href="https://btcmap.org/" target="_blank" rel="noopener noreferrer">BTC Map</a> — Add / verify a merchant location</li>
+        <li>Lightning POS options — (add preferred stack: e.g., BTCPay Server, Coinos, etc.)</li>
+        <li>Staff training checklist — (add)</li>
+      </ul>
+
+      <hr class="hr" />
+
+      <h2 class="h2">For users</h2>
+      <ul class="list">
+        <li>Wallet selection — (add)</li>
+        <li>Best practices: backups, seed words, lightning liquidity — (add)</li>
+      </ul>
+
+      <p class="muted">
+        This page is intentionally simple. We can expand it over time or organize it into categories.
+      </p>
+    </section>
+  </main>
+
+  <footer class="footer">
+    <div class="wrap footer-inner">
+      <div>bitcoindiana.org</div>
+      <div class="footer-muted">Resources</div>
+    </div>
+  </footer>
+
+  <script src="/assets/js/site.js"></script>
+</body>
+</html>
 
