Add About page content and structure

--- a/about/index.html
+++ b/about/index.html
@@ -1,1 +1,66 @@
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>About | bitcoindiana.org</title>
+  <meta name="description" content="About Bitcoin Indiana." />
+  <link rel="stylesheet" href="/assets/css/site.css" />
+</head>
+
+<body>
+  <header class="header">
+    <nav class="topnav wrap" aria-label="Primary">
+      <a class="brand" href="/" aria-label="Bitcoin Indiana (home)">
+        <img class="brand-logo" src="/assets/img/logo.svg" alt="" />
+        <span class="brand-name">Bitcoin Indiana</span>
+      </a>
+
+      <div class="links">
+        <a href="/" data-nav="map">Map</a>
+        <a href="/meetups/" data-nav="meetups">Meetups</a>
+        <a href="/events/" data-nav="events">Events</a>
+        <a href="/resources/" data-nav="resources">Resources</a>
+        <a href="/about/" data-nav="about">About</a>
+      </div>
+    </nav>
+
+    <div class="wrap header-content">
+      <h1 class="page-title">About</h1>
+      <p class="page-intro">
+        bitcoindiana.org is a simple directory + community hub for people building a Bitcoin circular economy in Indiana.
+        It uses public data from BTC Map and aims to make it easy to find places to spend sats.
+      </p>
+    </div>
+  </header>
+
+  <main class="wrap main">
+    <section class="panel pad">
+      <h2 class="h2">Contact / Contributing</h2>
+      <ul class="list">
+        <li>GitHub: add your repo URL here once created</li>
+        <li>Email: add (optional)</li>
+        <li>Social: add (optional)</li>
+      </ul>
+
+      <hr class="hr" />
+
+      <h2 class="h2">Data attribution</h2>
+      <p class="muted">
+        Merchant locations come from BTC Map (which itself is built on OpenStreetMap data and community contributions).
+        If something is wrong, the best fix is upstream so everyone benefits.
+      </p>
+    </section>
+  </main>
+
+  <footer class="footer">
+    <div class="wrap footer-inner">
+      <div>bitcoindiana.org</div>
+      <div class="footer-muted">About</div>
+    </div>
+  </footer>
+
+  <script src="/assets/js/site.js"></script>
+</body>
+</html>
 
