Revise title, description, and footer links in index.html
Updated title and description meta tags for clarity. Enhanced footer links for better navigation.

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Bitcoin Accepting Merchants (Indiana) | bitcoindiana.org</title>
-  <meta name="description" content="Bitcoin accepting merchants in Indiana, powered by BTC Map." />
+  <title>bitcoINdiana | bitcoindiana.org</title>
+  <meta name="description" content="Bitcoin In Indiana, powered by BTC Map." />
 
   <!-- Shared site CSS -->
   <link rel="stylesheet" href="/assets/css/site.css" />
@@ -18,7 +18,7 @@
   <header class="header">
     <nav class="topnav wrap" aria-label="Primary">
       <!--
-        Replace /assets/img/logo.svg with your own logo file later.
+        Site Logo /assets/img/logo.svg
         Keep the class names; CSS will size it correctly.
       -->
       <a class="brand" href="/" aria-label="Bitcoin Indiana (home)">
@@ -38,10 +38,7 @@
     <div class="wrap header-content">
       <h1 class="page-title">Bitcoin Accepting Merchants</h1>
       <p class="page-intro">
-        A circular economy is where bitcoin flows from earners to merchants and back again—closing the loop so saving in bitcoin
-        doesn’t require exiting to fiat just to live. The more we spend bitcoin for real goods and services (as a medium of exchange),
-        the more resilient local communities become: fewer conversion points, lower friction, and stronger incentives for merchants to
-        stack and hold.
+        This <a href="https://btcmap.org/map?lat=39.7684&lon=-86.1581" target="_blank">BTC Map</a> of Bitcoin-accepting merchants is filtered to Indiana. Consider supporting these businesses to help build a circular economy.
       </p>
     </div>
   </header>
@@ -78,8 +75,10 @@
           <div class="status" id="status"></div>
 
           <div class="note">
-            Data is maintained upstream (BTC Map / OpenStreetMap). If a place is missing or misplaced, it’s usually a coordinates/tags
-            issue in the source.
+            Data is maintained upstream by <a href="https://btcmap.org/add-location" target="_blank">BTC Map</a> 
+            and <a href="https://www.openstreetmap.org/about" target="_blank">OpenStreetMap</a>. 
+            If a place is missing or misplaced, please make the correct via <a href="https://btcmap.org/add-location" target="_blank">BTC Map</a> 
+            and it will appear here in a few days.
           </div>
         </div>
       </aside>
@@ -88,9 +87,11 @@
 
   <footer class="footer">
     <div class="wrap footer-inner">
-      <div>bitcoindiana.org</div>
+      <div><a href="/">bitcoINdiana.org</a></div>
       <div class="footer-muted">
-        Map UI: Leaflet • Basemap: OpenStreetMap • Merchants: BTC Map
+        Map UI: <a href="https://leafletjs.com/" target="_blank">Leaflet</a> • 
+        Basemap: <a href="https://www.openstreetmap.org/" target="_blank">OpenStreetMap</a> • 
+        Merchants: <a href="https://btcmap.org/" target="_blank">BTC Map</a>
       </div>
     </div>
   </footer>
