--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
     <div class="wrap header-content">
       <h1 class="page-title">Bitcoin Accepting Merchants</h1>
       <p class="page-intro">
-        This <a href="https://btcmap.org/map?lat=39.7684&lon=-86.1581" target="_blank">BTC Map</a> of Bitcoin-accepting merchants is filtered to Indiana. Consider supporting these businesses to help build a circular economy.
+        This <a href="https://btcmap.org/map?lat=39.7684&lon=-86.1581" target="_blank">BTC Map</a> of Bitcoin-accepting merchants is filtered to Indiana. 
+        Consider supporting these businesses to help build a circular Bitcoin economy.
       </p>
     </div>
   </header>
@@ -87,11 +88,11 @@
 
   <footer class="footer">
     <div class="wrap footer-inner">
-      <div><a href="/">bitcoINdiana.org</a></div>
+      <div><a href="/" title="Bitcoin Indiana">bitcoINdiana.org</a> by <a href="https://relativelyirrelevant.vip/" title="Relatively Irrelevant">relativelyirrelevant.vip</a></div>
       <div class="footer-muted">
-        Map UI: <a href="https://leafletjs.com/" target="_blank">Leaflet</a> • 
-        Basemap: <a href="https://www.openstreetmap.org/" target="_blank">OpenStreetMap</a> • 
-        Merchants: <a href="https://btcmap.org/" target="_blank">BTC Map</a>
+        Map UI: <a href="https://leafletjs.com/" target="_blank" title="Leaflet">Leaflet</a> • 
+        Basemap: <a href="https://www.openstreetmap.org/" target="_blank" title="OpenStreetMap">OpenStreetMap</a> • 
+        Merchants: <a href="https://btcmap.org/" target="_blank" title="BTC Map">BTC Map</a>
       </div>
     </div>
   </footer>
