Update About page content and links

--- a/about/index.html
+++ b/about/index.html
@@ -28,7 +28,7 @@
     <div class="wrap header-content">
       <h1 class="page-title">About</h1>
       <p class="page-intro">
-        bitcoindiana.org is a simple directory + community hub for people building a Bitcoin circular economy in Indiana.
+        bitcoindiana.org is a simple collection of resources for people building a Bitcoin circular economy in Indiana.
         It uses public data from BTC Map and aims to make it easy to find places to spend sats.
       </p>
     </div>
@@ -38,9 +38,10 @@
     <section class="panel pad">
       <h2 class="h2">Contact / Contributing</h2>
       <ul class="list">
-        <li>GitHub: add your repo URL here once created</li>
-        <li>Email: add (optional)</li>
-        <li>Social: add (optional)</li>
+        <li>GitHub: <a href="https://github.com/RelativelyIrrelevant/bitcoindiana.org/">https://github.com/RelativelyIrrelevant/bitcoindiana.org/</a></li>
+        <li>Developer Nostr: <a href="https://primal.net/p/nprofile1qqsw63vg8qceqvwpw9y5fjgmc06ec4k6peme99ajy4quselxxt60ecgyk7a69">Relatively Irrelevant</a></li>
+        <li>Developer X: <a href="https://x.com/RelIrrelvantVIP">@RelIrrelvantVIP</a></li>
+        <li>Developer URL: <a href="https://relativelyirrelevant.vip/" title="Relatively Irrelevant">relativelyirrelevant.vip</a></li>
       </ul>
 
       <hr class="hr" />
@@ -55,8 +56,12 @@
 
   <footer class="footer">
     <div class="wrap footer-inner">
-      <div>bitcoindiana.org</div>
-      <div class="footer-muted">About</div>
+      <div><a href="/" title="Bitcoin Indiana">bitcoINdiana.org</a> by <a href="https://relativelyirrelevant.vip/" title="Relatively Irrelevant">relativelyirrelevant.vip</a></div>
+      <div class="footer-muted">
+        Map UI: <a href="https://leafletjs.com/" target="_blank" title="Leaflet">Leaflet</a> • 
+        Basemap: <a href="https://www.openstreetmap.org/" target="_blank" title="OpenStreetMap">OpenStreetMap</a> • 
+        Merchants: <a href="https://btcmap.org/" target="_blank" title="BTC Map">BTC Map</a>
+      </div>
     </div>
   </footer>
 
