Revise event details and footer links in index.html
Updated event description and submission instructions.

--- a/events/index.html
+++ b/events/index.html
@@ -28,7 +28,7 @@
     <div class="wrap header-content">
       <h1 class="page-title">Events</h1>
       <p class="page-intro">
-        One-off gatherings, workshops, merchant onboarding nights, conferences, and “pay in sats” pub crawls. If you’re hosting,
+        One-off gatherings, workshops, merchant onboarding nights, conferences, and “pay in sats” pub crawls may oneday apear here. If you’re hosting,
         share the details so people can show up and spend bitcoin.
       </p>
     </div>
@@ -38,15 +38,14 @@
     <section class="panel pad">
       <h2 class="h2">Upcoming events (placeholder)</h2>
       <div class="muted">
-        Add events here for now. Later, we can render from <code>/assets/data/events.json</code> or an iCal feed.
+        TBD. Considering an <code>/assets/data/events.json</code> or an iCal feed.
       </div>
 
       <hr class="hr" />
 
       <h3 class="h3">How to submit</h3>
       <ol class="list">
-        <li>Open a PR on the GitHub repo</li>
-        <li>Add your event to this page (or to the future JSON file)</li>
+        <li>Visit the About page and message the developer</li>
         <li>Include: date/time, city, venue, RSVP link, and whether spending sats is supported</li>
       </ol>
     </section>
@@ -54,8 +53,12 @@
 
   <footer class="footer">
     <div class="wrap footer-inner">
-      <div>bitcoindiana.org</div>
-      <div class="footer-muted">Events</div>
+      <div><a href="/" title="Bitcoin Indiana">bitcoINdiana.org</a> by <a href="https://relativelyirrelevant.vip/" title="Relatively Irrelevant">relativelyirrelevant.vip</a></div>
+      <div class="footer-muted">
+        Map UI: <a href="https://leafletjs.com/" target="_blank" title="Leaflet">Leaflet</a> • 
+        Basemap: <a href="https://www.openstreetmap.org/" target="_blank" title="OpenStreetMap">OpenStreetMap</a> • 
+        Merchants: <a href="https://btcmap.org/" target="_blank" title="BTC Map">BTC Map</a>
+      </div>
     </div>
   </footer>
 
