Revise Indiana meetup information and footer links
Updated meetup details for Indiana, including Indianapolis meetup specifics and footer links.

--- a/meetups/index.html
+++ b/meetups/index.html
@@ -28,31 +28,42 @@
     <div class="wrap header-content">
       <h1 class="page-title">Meetups</h1>
       <p class="page-intro">
-        Regular meetups make the circular economy real: you meet builders, merchants, educators, and plebs who are actually spending and
-        earning sats locally. Add your meetup here (PRs welcome).
+        If you host a bitcoin-only meetup in Indiana, please let us know. Meanwhile, Indianapolis' meetup has 30 to 50 attend each month. 
+        Come you meet your merchants, educators, and plebs who are actually spending and earning sats locally.
       </p>
     </div>
   </header>
 
   <main class="wrap main">
     <section class="panel pad">
-      <h2 class="h2">Recurring meetups (placeholder)</h2>
+      <h2 class="h2">Recurring meetups</h2>
+      <p>As of 2026, regular Bitcoin meetups are occuring in these Indiana cities</p>
+
+      <h3 class="h3">Indianapolis</h3>
+      
       <ul class="list">
-        <li><strong>Indianapolis</strong> — Add details (location, cadence, organizer link)</li>
-        <li><strong>Fort Wayne</strong> — Add details</li>
-        <li><strong>Bloomington</strong> — Add details</li>
+        <li><strong>Indy Bitcoin Meetup</strong></li>
+        <li><strong>Monthly</strong>: Third Wednesday of each month at 7 pm</li>
+        <li><strong>Location</strong>: Union Jack Pub, 921 Broad Ripple Ave, Indianapolis, IN 46220</li>
+        <li><strong>Website</strong>: <a href="https://indybitcoinmeetup.com/">indybitcoinmeetup.com</a></li>
+        <li><strong>Meetup</strong>: <a href="https://www.meetup.com/indianapolis-bitcoin-meetup/">meetup.com/indianapolis-bitcoin-meetup</a></li>
+        <li><strong>X</strong>: <a href="https://x.com/IndyBitcoin">@IndyBitcoin</a></li>
       </ul>
 
       <p class="muted">
-        Later, we can drive this page from a simple JSON file in <code>/assets/data/meetups.json</code>.
+        Please contact the developer if you run a Bitcoin-only meetup in Indiana.
       </p>
     </section>
   </main>
-
+  
   <footer class="footer">
     <div class="wrap footer-inner">
-      <div>bitcoindiana.org</div>
-      <div class="footer-muted">Meetups • Events • Resources</div>
+      <div><a href="/" title="Bitcoin Indiana">bitcoINdiana.org</a> by <a href="https://relativelyirrelevant.vip/" title="Relatively Irrelevant">relativelyirrelevant.vip</a></div>
+      <div class="footer-muted">
+        Map UI: <a href="https://leafletjs.com/" target="_blank" title="Leaflet">Leaflet</a> • 
+        Basemap: <a href="https://www.openstreetmap.org/" target="_blank" title="OpenStreetMap">OpenStreetMap</a> • 
+        Merchants: <a href="https://btcmap.org/" target="_blank" title="BTC Map">BTC Map</a>
+      </div>
     </div>
   </footer>
 
