Revise page intro and footer content
Updated the introductory text and footer links to reflect changes for Indiana Bitcoiners.

--- a/resources/index.html
+++ b/resources/index.html
@@ -28,7 +28,7 @@
     <div class="wrap header-content">
       <h1 class="page-title">Resources</h1>
       <p class="page-intro">
-        Practical links for spending, earning, and onboarding merchants—focused on Lightning payments and simple ops.
+        Practical links for Indiana Bitcoiners will be added here over time.
       </p>
     </div>
   </header>
@@ -58,8 +58,12 @@
 
   <footer class="footer">
     <div class="wrap footer-inner">
-      <div>bitcoindiana.org</div>
-      <div class="footer-muted">Resources</div>
+      <div><a href="/" title="Bitcoin Indiana">bitcoINdiana.org</a> by <a href="https://relativelyirrelevant.vip/" title="Relatively Irrelevant">relativelyirrelevant.vip</a></div>
+      <div class="footer-muted">
+        Map UI: <a href="https://leafletjs.com/" target="_blank" title="Leaflet">Leaflet</a> • 
+        Basemap: <a href="https://www.openstreetmap.org/" target="_blank" title="OpenStreetMap">OpenStreetMap</a> • 
+        Merchants: <a href="https://btcmap.org/" target="_blank" title="BTC Map">BTC Map</a>
+      </div>
     </div>
   </footer>
 
