--- a/events/index.html
+++ b/events/index.html
@@ -19,8 +19,8 @@
       <div class="links">
         <a href="/" data-nav="map">Map</a>
         <a href="/meetups/" data-nav="meetups">Meetups</a>
-        <a href="/events/" data-nav="events">Events</a>
-        <a href="/resources/" data-nav="resources">Resources</a>
+        <!-- <a href="/events/" data-nav="events">Events</a> -->
+        <!-- <a href="/resources/" data-nav="resources">Resources</a> -->
         <a href="/about/" data-nav="about">About</a>
       </div>
     </nav>
