--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       -->
       <a class="brand" href="/" aria-label="Bitcoin Indiana (home)">
         <img class="brand-logo" src="/assets/img/logo.svg" alt="" />
-        <span class="brand-name">Bitcoin Indiana</span>
+        <span class="brand-name">bitcoINdiana | Bitcoin Indiana</span>
       </a>
 
       <div class="links">
