Update brand name to include 'bitcoINdiana'

--- a/meetups/index.html
+++ b/meetups/index.html
@@ -13,7 +13,7 @@
     <nav class="topnav wrap" aria-label="Primary">
       <a class="brand" href="/" aria-label="Bitcoin Indiana (home)">
         <img class="brand-logo" src="/assets/img/logo.svg" alt="" />
-        <span class="brand-name">Bitcoin Indiana</span>
+        <span class="brand-name">bitcoINdiana | Bitcoin Indiana</span>
       </a>
 
       <div class="links">
