Change page title and improve intro description
Updated page title and intro text for clarity.

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
     </nav>
 
     <div class="wrap header-content">
-      <h1 class="page-title">Bitcoin Accepting Merchants</h1>
+      <h1 class="page-title">Bitcoin Indiana Merchants</h1>
       <p class="page-intro">
-        This <a href="https://btcmap.org/map?lat=39.7684&lon=-86.1581" target="_blank">BTC Map</a> of Bitcoin-accepting merchants is filtered to Indiana. 
-        Consider supporting these businesses to help build a circular Bitcoin economy.
+        This <a href="https://btcmap.org/map?lat=39.7684&lon=-86.1581" target="_blank">BTC Map</a> of Bitcoin-accepting merchants, filtered to those located in Indiana. 
+        Consider supporting these bitcoINdiana businesses to help build a circular Bitcoin economy.
       </p>
     </div>
   </header>
