Add Marion Bitcoin Meetup information
Added details for Marion Bitcoin Meetup including schedule and location.

--- a/meetups/index.html
+++ b/meetups/index.html
@@ -39,7 +39,7 @@
       <h2 class="h2">Recurring meetups</h2>
       <p>As of 2026, regular Bitcoin meetups are occuring in these Indiana cities</p>
 
-      <h3 class="h3">Indianapolis</h3>
+      <h3 class="h3">Indianapolis, IN</h3>
       
       <ul class="list">
         <li><strong>Indy Bitcoin Meetup</strong></li>
@@ -48,6 +48,17 @@
         <li><strong>Website</strong>: <a href="https://indybitcoinmeetup.com/">indybitcoinmeetup.com</a></li>
         <li><strong>Meetup</strong>: <a href="https://www.meetup.com/indianapolis-bitcoin-meetup/">meetup.com/indianapolis-bitcoin-meetup</a></li>
         <li><strong>X</strong>: <a href="https://x.com/IndyBitcoin">@IndyBitcoin</a></li>
+      </ul>
+
+      <h3 class="h3">Marion, IN</h3>
+      
+      <ul class="list">
+        <li><strong>Marion Bitcoin Meetup</strong></li>
+        <li><strong>Monthly</strong>: First Wednesday of each month at 6 pm</li>
+        <li><strong>Location</strong>: OBI's BBQ, 402 S Washington St, Marion, IN 46953</li>
+        <li><strong>Website</strong>: TBD</li>
+        <li><strong>Meetup</strong>: TBD</li>
+        <li><strong>Nostr</strong>: TBD</li>
       </ul>
 
       <p class="muted">
