Update Nostr entry with clickable profile link
Updated Nostr link to include a clickable profile.

--- a/meetups/index.html
+++ b/meetups/index.html
@@ -58,7 +58,7 @@
         <li><strong>Location</strong>: OBI's BBQ, 402 S Washington St, Marion, IN 46953</li>
         <li><strong>Website</strong>: TBD</li>
         <li><strong>Meetup</strong>: TBD</li>
-        <li><strong>Nostr</strong>: TBD</li>
+        <li><strong>Nostr</strong>: <a href="https://primal.net/p/nprofile1qqsgmcmm3x987qfgzpaez6dc9kkgqwuc4m6w4xplv9ewl4pkqhg6nxgvxk2xc">@Pleb2Polymath</a></li>
       </ul>
 
       <p class="muted">
