Fix typo in meetup introduction text

--- a/meetups/index.html
+++ b/meetups/index.html
@@ -29,7 +29,7 @@
       <h1 class="page-title">Meetups</h1>
       <p class="page-intro">
         If you host a bitcoin-only meetup in Indiana, please let us know. Meanwhile, Indianapolis' meetup has 30 to 50 attend each month. 
-        Come you meet your merchants, educators, and plebs who are actually spending and earning sats locally.
+        Come meet merchants, educators, and plebs who are actually spending and earning sats locally.
       </p>
     </div>
   </header>
