Update meetup information with additional details
Added a note about checking websites and social media for meetup details.

--- a/meetups/index.html
+++ b/meetups/index.html
@@ -37,7 +37,7 @@
   <main class="wrap main">
     <section class="panel pad">
       <h2 class="h2">Recurring meetups</h2>
-      <p>As of 2026, regular Bitcoin meetups are occuring in these Indiana cities</p>
+      <p>As of 2026, regular Bitcoin meetups are occuring in these Indiana cities. Please check their websites and social media for details, for regularly scheduled plans can sometimes change.</p>
 
       <h3 class="h3">Indianapolis, IN</h3>
       
