--- a/meetups/index.html
+++ b/meetups/index.html
@@ -26,7 +26,7 @@
     </nav>
 
     <div class="wrap header-content">
-      <h1 class="page-title">Meetups</h1>
+      <h1 class="page-title">Bitcoin Indiana Meetups</h1>
       <p class="page-intro">
         If you host a bitcoin-only meetup in Indiana, please let us know. Meanwhile, Indianapolis' meetup has 30 to 50 attend each month. 
         Come meet merchants, educators, and plebs who are actually spending and earning sats locally.
