Refine meetupmap.html title and content
Updated title and description for clarity. Modified header and introductory text for better user guidance.

--- a/meetups/meetupmap.html
+++ b/meetups/meetupmap.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>bitcoINdiana Meetups Map (test) | bitcoindiana.org</title>
-  <meta name="description" content="Bitcoin meetups in Indiana (test map)." />
+  <title>bitcoINdiana Meetups | bitcoindiana.org</title>
+  <meta name="description" content="Bitcoin meetups in Indiana." />
 
   <!-- Shared site CSS -->
   <link rel="stylesheet" href="/assets/css/site.css" />
@@ -17,7 +17,7 @@
   <header class="header">
     <nav class="topnav wrap" aria-label="Primary">
       <a class="brand" href="/" aria-label="Bitcoin Indiana (home)">
-        <img class="brand-logo" src="/assets/img/logo.svg" alt="" />
+        <img class="brand-logo" src="/assets/img/logo.svg" alt="bitcoINdiana | Bitcoin Indiana" title="bitcoINdiana | Bitcoin Indiana" />
         <span class="brand-name">bitcoINdiana | Bitcoin Indiana</span>
       </a>
 
@@ -29,10 +29,9 @@
     </nav>
 
     <div class="wrap header-content">
-      <h1 class="page-title">Bitcoin Indiana Meetups (Test Map)</h1>
+      <h1 class="page-title">Bitcoin Indiana Meetups</h1>
       <p class="page-intro">
-        Map of recurring Bitcoin meetups in Indiana. Data source:
-        <code>/assets/data/meetups.json</code>. Always confirm details before traveling.
+        Map of recurring Bitcoin meetups in Indiana. Please confirm details from the meetup before traveling.
       </p>
     </div>
   </header>
@@ -68,8 +67,7 @@
           <div class="status" id="status"></div>
 
           <div class="note">
-            This is a temporary test page (<code>/meetupmap.html</code>). If it looks good, we can replace
-            <code>/meetups/index.html</code> with the same layout.
+            You may search by city, county, meetup name, venue name, day of the week, and more.
           </div>
         </div>
       </aside>
