--- a/about/index.html
+++ b/about/index.html
@@ -12,12 +12,12 @@
   <header class="header">
     <nav class="topnav wrap" aria-label="Primary">
       <a class="brand" href="/" aria-label="Bitcoin Indiana (home)">
-        <img class="brand-logo" src="/assets/img/logo.svg" alt="" />
+        <img class="brand-logo" src="/assets/img/logo.svg" alt="bitcoINdiana | Bitcoin Indiana" title="bitcoINdiana | Bitcoin Indiana" />
         <span class="brand-name">bitcoINdiana | Bitcoin Indiana</span>
       </a>
 
       <div class="links">
-        <a href="/" data-nav="map">Map</a>
+        <a href="/" data-nav="merchants">Merchants</a>
         <a href="/meetups/" data-nav="meetups">Meetups</a>
         <!-- <a href="/events/" data-nav="events">Events</a> -->
         <!-- <a href="/resources/" data-nav="resources">Resources</a> -->
