--- a/meetups/meetupmap.html
+++ b/meetups/meetupmap.html
@@ -22,7 +22,7 @@
       </a>
 
       <div class="links">
-        <a href="/" data-nav="map">Map</a>
+        <a href="/" data-nav="merchants">Merchants</a>
         <a href="/meetups/" data-nav="meetups">Meetups</a>
         <a href="/about/" data-nav="about">About</a>
       </div>
