--- a/about/index.html
+++ b/about/index.html
@@ -26,7 +26,7 @@
     </nav>
 
     <div class="wrap header-content">
-      <h1 class="page-title">About</h1>
+      <h1 class="page-title">About Bitcoin Indiana (bitcoINdiana)</h1>
       <p class="page-intro">
         bitcoindiana.org is a simple collection of resources for people building a Bitcoin circular economy in Indiana.
         It uses public data from BTC Map and aims to make it easy to find places to spend sats.
