--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>bitcoINdiana | bitcoindiana.org</title>
-  <meta name="description" content="Bitcoin In Indiana, powered by BTC Map." />
+  <title>bitcoINdiana | Merchants</title>
+  <meta name="description" content="A map of merchants that accept Bitcoin in Indiana." />
 
   <!-- Shared site CSS -->
   <link rel="stylesheet" href="/assets/css/site.css" />
