--- a/about/index.html
+++ b/about/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>About | bitcoindiana.org</title>
-  <meta name="description" content="About Bitcoin Indiana." />
+  <title>bitcoINdiana | About</title>
+  <meta name="description" content="About bitcoINdiana" />
   <link rel="stylesheet" href="/assets/css/site.css" />
 </head>
 
@@ -26,7 +26,7 @@
     </nav>
 
     <div class="wrap header-content">
-      <h1 class="page-title">About Bitcoin Indiana (bitcoINdiana)</h1>
+      <h1 class="page-title">About bitcoINdiana</h1>
       <p class="page-intro">
         bitcoindiana.org is a simple collection of resources for people building a Bitcoin circular economy in Indiana.
         It uses public data from BTC Map and aims to make it easy to find places to spend sats.
