--- a/meetups/index.html
+++ b/meetups/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Meetups | bitcoindiana.org</title>
-  <meta name="description" content="Bitcoin meetups across Indiana." />
+  <title>bitcoINdiana | Meetups</title>
+  <meta name="description" content="A map of Bitcoin Meetups that meet regularly in Indiana" />
   <link rel="stylesheet" href="/assets/css/site.css" />
 </head>
 
