--- a/meetups/meetupmap.html
+++ b/meetups/meetupmap.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>bitcoINdiana Meetups | bitcoindiana.org</title>
-  <meta name="description" content="Bitcoin meetups in Indiana." />
+  <title>bitcoINdiana | Meetups</title>
+  <meta name="description" content="A map of Bitcoin Meetups that meet regularly in Indiana" />
 
   <!-- Shared site CSS -->
   <link rel="stylesheet" href="/assets/css/site.css" />
