--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
     <div class="wrap header-content">
       <h1 class="page-title">Bitcoin Indiana Merchants</h1>
       <p class="page-intro">
-        This <a href="https://btcmap.org/map?lat=39.7684&lon=-86.1581" target="_blank">BTC Map</a> of Bitcoin-accepting merchants, filtered to those located in Indiana. 
-        Consider supporting these bitcoINdiana businesses to help build a circular Bitcoin economy.
+        Map of Bitcoin-accepting merchants in Indiana. Please confirm details from the mertchant before traveling. Support a circular Bitcoin economy.
       </p>
     </div>
   </header>
