--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>bitcoINdiana | Merchants</title>
+  <title>Merchants | bitcoINdiana</title>
   <meta name="description" content="A map of merchants that accept Bitcoin in Indiana." />
 
   <!-- Shared site CSS -->
