--- a/about/index.html
+++ b/about/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>bitcoINdiana | About</title>
+  <title>About | bitcoINdiana</title>
   <meta name="description" content="About bitcoINdiana" />
   <link rel="stylesheet" href="/assets/css/site.css" />
 </head>
