--- a/meetups/index.html
+++ b/meetups/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>bitcoINdiana | Meetups</title>
+  <title>Meetups | bitcoINdiana</title>
   <meta name="description" content="A map of Bitcoin Meetups that meet regularly in Indiana" />
 
   <!-- Shared site CSS -->
