--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div class="wrap header-content">
       <h1 class="page-title">Bitcoin Indiana Merchants</h1>
       <p class="page-intro">
-        Map of Bitcoin-accepting merchants in Indiana. Please confirm details from the mertchant before traveling. Support a circular Bitcoin economy.
+        Map of Bitcoin-accepting merchants in Indiana. Please confirm details from the merchant before traveling. Support a circular Bitcoin economy.
       </p>
     </div>
   </header>
