--- a/meetups/index.html
+++ b/meetups/index.html
@@ -24,7 +24,7 @@
       <div class="links">
         <a href="/" data-nav="merchants">Merchants</a>
         <a href="/meetups/" data-nav="meetups">Meetups</a>
-        <a href="/about/" data-nav="about">About</a>
+        <!-- <a href="/about/" data-nav="about">About</a> -->
       </div>
     </nav>
 
@@ -76,7 +76,7 @@
 
   <footer class="footer">
     <div class="wrap footer-inner">
-      <div><a href="/" title="Bitcoin Indiana">bitcoINdiana.org</a> by <a href="https://relativelyirrelevant.vip/" title="Relatively Irrelevant">relativelyirrelevant.vip</a></div>
+      <div><a href="/about/" data-nav="about">About bitcoINdiana</a> by <a href="https://relativelyirrelevant.vip/" title="Relatively Irrelevant">relativelyirrelevant.vip</a></div>
       <div class="footer-muted">
         Map UI: <a href="https://leafletjs.com/" target="_blank" title="Leaflet">Leaflet</a> •
         Basemap: <a href="https://www.openstreetmap.org/" target="_blank" title="OpenStreetMap">OpenStreetMap</a>
