Symmetrical URLs for /merchants/

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 
   <!-- Leaflet CSS (UNPKG) -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
+
+  <!-- Symmetrical URLs, making /index.html and /merchants/index.html the same content -->
+  <link rel="canonical" href="https://bitcoinindiana.org/" />
 </head>
 
 <body>
