--- a/merchants/index.html
+++ b/merchants/index.html
@@ -1,1 +1,111 @@
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Merchants | bitcoINdiana</title>
+  <meta name="description" content="A map of merchants that accept Bitcoin in Indiana." />
 
+  <!-- Shared site CSS -->
+  <link rel="stylesheet" href="/assets/css/site.css" />
+
+  <!-- Leaflet CSS (UNPKG) -->
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
+
+  <!-- Symmetrical URLs, making /index.html and /merchants/index.html the same content -->
+  <link rel="canonical" href="https://bitcoinindiana.org/" />
+</head>
+
+<body>
+  <!-- Top navigation (shared markup pattern used on all pages) -->
+  <header class="header">
+    <nav class="topnav wrap" aria-label="Primary">
+      <!--
+        Site Logo /assets/img/logo.svg
+        Keep the class names; CSS will size it correctly.
+      -->
+      <a class="brand" href="/" aria-label="Bitcoin Indiana (home)">
+        <img class="brand-logo" src="/assets/img/logo.svg" alt="bitcoINdiana | Bitcoin Indiana" title="bitcoINdiana | Bitcoin Indiana" />
+        <span class="brand-name">bitcoINdiana | Bitcoin Indiana</span>
+      </a>
+
+      <div class="links">
+        <a href="/merchants/" data-nav="merchants">Merchants</a>
+        <a href="/meetups/" data-nav="meetups">Meetups</a>
+        <!-- <a href="/events/" data-nav="events">Events</a> -->
+        <!-- <a href="/resources/" data-nav="resources">Resources</a> -->
+        <!-- <a href="/about/" data-nav="about">About</a> -->
+      </div>
+    </nav>
+
+    <div class="wrap header-content">
+      <h1 class="page-title">Bitcoin Indiana Merchants</h1>
+      <p class="page-intro">
+        Map of Bitcoin-accepting merchants in Indiana. Please confirm details from the merchant before traveling. Support a circular Bitcoin economy.
+      </p>
+    </div>
+  </header>
+
+  <main class="wrap main">
+    <div class="grid">
+      <section class="panel" aria-label="Map of bitcoin accepting merchants">
+        <div id="map" class="map" role="application" aria-label="Interactive map"></div>
+      </section>
+
+      <aside class="panel" aria-label="Filters and info">
+        <div class="controls">
+          <div class="field">
+            <label for="q">Search</label>
+            <input id="q" type="text" placeholder="Search name, address…" autocomplete="off" />
+          </div>
+
+          <div class="chips" aria-label="Quick filters">
+            <span class="chip">Source: api.btcmap.org (Places v4)</span>
+            <span class="chip">Indiana: point-in-polygon</span>
+            <span class="chip">Excluded: currency_exchange, local_atm</span>
+          </div>
+
+          <div class="meta">
+            <div>
+              Showing: <strong><span id="count">0</span></strong> <span id="countNote">locations</span>
+            </div>
+            <div class="btns">
+              <button id="btnFit" type="button">Fit Indiana</button>
+              <button id="btnReload" type="button">Reload</button>
+            </div>
+          </div>
+
+          <div class="status" id="status"></div>
+
+          <div class="note">
+            Data is maintained upstream by <a href="https://btcmap.org/add-location" target="_blank">BTC Map</a> 
+            and <a href="https://www.openstreetmap.org/about" target="_blank">OpenStreetMap</a>. 
+            If a place is missing or misplaced, please make the correct via <a href="https://btcmap.org/add-location" target="_blank">BTC Map</a> 
+            and it will appear here in a few days.
+          </div>
+        </div>
+      </aside>
+    </div>
+  </main>
+
+  <footer class="footer">
+    <div class="wrap footer-inner">
+      <div><a href="/about/" data-nav="about">About bitcoINdiana</a> by <a href="https://relativelyirrelevant.vip/" title="Relatively Irrelevant">relativelyirrelevant.vip</a></div>
+      <div class="footer-muted">
+        Map UI: <a href="https://leafletjs.com/" target="_blank" title="Leaflet">Leaflet</a> • 
+        Basemap: <a href="https://www.openstreetmap.org/" target="_blank" title="OpenStreetMap">OpenStreetMap</a> • 
+        Merchants: <a href="https://btcmap.org/" target="_blank" title="BTC Map">BTC Map</a>
+      </div>
+    </div>
+  </footer>
+
+  <!-- Shared site JS (active nav, small helpers) -->
+  <script src="/assets/js/site.js"></script>
+
+  <!-- Leaflet JS (UNPKG) -->
+  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+
+  <!-- Map logic -->
+  <script src="/assets/js/map.js"></script>
+</body>
+</html>
