--- a/meetups/index.html
+++ b/meetups/index.html
@@ -22,9 +22,8 @@
       </a>
 
       <div class="links">
-        <a href="/" data-nav="merchants">Merchants</a>
+        <a href="/merchants/" data-nav="merchants">Merchants</a>
         <a href="/meetups/" data-nav="meetups">Meetups</a>
-        <!-- <a href="/about/" data-nav="about">About</a> -->
       </div>
     </nav>
 
