--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </a>
 
       <div class="links">
-        <a href="/" data-nav="merchants">Merchants</a>
+        <a href="/merchants/" data-nav="merchants">Merchants</a>
         <a href="/meetups/" data-nav="meetups">Meetups</a>
         <!-- <a href="/events/" data-nav="events">Events</a> -->
         <!-- <a href="/resources/" data-nav="resources">Resources</a> -->
