Add IL, KY, MI, OH neighbors.

--- a/meetups/index.html
+++ b/meetups/index.html
@@ -30,7 +30,7 @@
     <div class="wrap header-content">
       <h1 class="page-title">Bitcoin Indiana Meetups</h1>
       <p class="page-intro">
-        Map of recurring Bitcoin meetups in Indiana. Please confirm details from the meetup before traveling.
+        Map of recurring Bitcoin meetups in Indiana (and IL, KY, MI, OH neighbors). Please confirm details from the meetup before traveling.
       </p>
     </div>
   </header>
