Added links to IL, KY, MI, OH

--- a/merchants/index.html
+++ b/merchants/index.html
@@ -39,9 +39,14 @@
     </nav>
 
     <div class="wrap header-content">
-      <h1 class="page-title">Bitcoin Indiana Merchants</h1>
-      <p class="page-intro">
-        Map of Bitcoin-accepting merchants in Indiana. Please confirm details from the merchant before traveling. Support a circular Bitcoin economy.
+      <h1 class="page-title" id="pageTitle">Bitcoin Indiana Merchants</h1>
+      <p class="page-intro" id="pageIntro">
+        Map of Bitcoin-accepting merchants in <a href="/merchants/index.html">Indiana</a> 
+        (and its <a href="/merchants/illinois.html">IL</a>, 
+        <a href="/merchants/kentucky.html">KY</a>, 
+        <a href="/merchants/michigan.html">MI</a>, 
+        <a href="/merchants/ohio.html">OH</a> neighbors). 
+        Please confirm details from the merchant before traveling. Support a circular Bitcoin economy.
       </p>
     </div>
   </header>
