--- a/merchants/index.html
+++ b/merchants/index.html
@@ -41,7 +41,7 @@
     <div class="wrap header-content">
       <h1 class="page-title" id="pageTitle">Bitcoin Indiana Merchants</h1>
       <p class="page-intro" id="pageIntro">
-        Map of Bitcoin-accepting merchants in <a href="/merchants/index.html">Indiana</a> 
+        Map of Bitcoin-accepting merchants in <a href="/merchants/">Indiana</a> 
         (and its <a href="/merchants/illinois.html">IL</a>, 
         <a href="/merchants/kentucky.html">KY</a>, 
         <a href="/merchants/michigan.html">MI</a>, 
