--- a/merchants/illinois.html
+++ b/merchants/illinois.html
@@ -34,14 +34,11 @@
     </nav>
 
     <div class="wrap header-content">
-      <h1 class="page-title" id="pageTitle">Bitcoin Indiana Merchants</h1>
+      <h1 class="page-title" id="pageTitle">Bitcoin Illinois Merchants</h1>
       <p class="page-intro" id="pageIntro">
-        Map of Bitcoin-accepting merchants in <a href="/merchants/">Indiana</a> 
-        (and its <a href="/merchants/illinois.html">IL</a>, 
-        <a href="/merchants/kentucky.html">KY</a>, 
-        <a href="/merchants/michigan.html">MI</a>, 
-        <a href="/merchants/ohio.html">OH</a> neighbors). 
-        Please confirm details from the merchant before traveling. Support a circular Bitcoin economy.
+        Map of Bitcoin-accepting merchants in Illinois. 
+        Please confirm details from the merchant before traveling. 
+        Return to <a href="/merchants/">Bitcoin Indiana Merchants</a>.
       </p>
     </div>
   </header>
@@ -114,7 +111,7 @@
       fitLabel: "Fit Illinois",
       pageTitle: "Bitcoin Illinois Merchants",
       // leave your linked intro if you prefer; otherwise this will replace it:
-      pageIntro: "Map of Bitcoin-accepting merchants in Illinois. Please confirm details from the merchant before traveling.",
+      // pageIntro: "Map of Bitcoin-accepting merchants in Illinois. Please confirm details from the merchant before traveling.",
       coverage: [
         { name: "Chicago / NE",  lat: 41.88, lon: -87.63, radius_km: 110 },
         { name: "North",        lat: 42.25, lon: -89.10, radius_km: 140 },
